--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "navbar",
   "version": "0.1.0",
- 
   "private": true,
   "engines": {
     "node": "20.11.0"
@@ -61,8 +60,12 @@
     ]
   },
   "devDependencies": {
+    "@octokit/rest": "^20.0.2",
     "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^6.1.1",
-    "github-pages": "^3.0.2"
+    "github-pages": "^3.0.2",
+    "source-map-resolve": "^0.6.0",
+    "source-map-url": "^0.4.1",
+    "svgo": "^2.0.0"
   }
 }
