--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "datatables.net": "^1.13.7",
     "date-fns": "^3.0.6",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-data-table-component": "^7.5.4",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.12.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^6.22.0",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
-    "react-toastify": "^9.1.3",
+    "react-toastify": "^10.0.4",
     "styled-components": "^6.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
