--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.4",
     "styled-components": "^6.1.1",
@@ -60,10 +60,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@octokit/rest": "^20.0.2",
     "@types/react-router-dom": "^5.3.3",
     "gh-pages": "^6.1.1",
-    "github-pages": "^3.0.2",
+    "github-pages": "^0.1.0",
     "source-map-resolve": "^0.6.0",
     "source-map-url": "^0.4.1",
     "svgo": "^3.2.0"
